<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAdvanceSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.search.advanced.AdvancedSearchActivity">

        <ImageButton
            android:id="@+id/backButtonAdvancedSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/backButtonContentDesc"
            android:background="@drawable/background_back_button"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:tint="@color/colorBaseBackround"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/advancedSearch"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/backButtonAdvancedSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backButtonAdvancedSearch" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/genres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButtonAdvancedSearch" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/chipGroupGenres" />

        <Spinner
            android:id="@+id/spinnerGreaterLowerYear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/greaterLowerYear"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputYearAdvanceSearch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerGreaterLowerYear"
            app:layout_constraintEnd_toEndOf="@+id/chipGroupGenres"
            app:layout_constraintStart_toEndOf="@+id/spinnerGreaterLowerYear"
            app:layout_constraintTop_toTopOf="@+id/spinnerGreaterLowerYear">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextYearAdvanceSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintYear"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/voteAverage"
            app:layout_constraintEnd_toEndOf="@+id/chipGroupGenres"
            app:layout_constraintStart_toStartOf="@+id/spinnerGreaterLowerYear"
            app:layout_constraintTop_toBottomOf="@+id/textInputYearAdvanceSearch" />

        <SeekBar
            android:id="@+id/seekbarAverageVoteAdvancedSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:max="100"
            android:progress="30"
            android:progressTint="@color/colorBaseText"
            app:layout_constraintBottom_toBottomOf="@+id/voteAverageMinAdvancedSearch"
            app:layout_constraintEnd_toStartOf="@+id/voteAverageMinAdvancedSearch"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/voteAverageMinAdvancedSearch" />

        <TextView
            android:id="@+id/voteAverageMinAdvancedSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/baseAverageVote"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/advanceSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:text="@string/searchButton"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sortBy"
            app:layout_constraintStart_toStartOf="@+id/seekbarAverageVoteAdvancedSearch"
            app:layout_constraintTop_toBottomOf="@+id/seekbarAverageVoteAdvancedSearch" />

        <Spinner
            android:id="@+id/spinnerSortAdvancedSearch"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/sortBySearch"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>